Bug 465817 - Lookandfeelexplorer omits icon theme while making a global theme
Summary: Lookandfeelexplorer omits icon theme while making a global theme
Status: RESOLVED FIXED
Alias: None
Product: Plasma SDK
Classification: Plasma
Component: General (other bugs)
Version First Reported In: 5.27.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-16 06:19 UTC by PK
Modified: 2023-04-04 17:38 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.27.5
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description PK 2023-02-16 06:19:13 UTC
SUMMARY
***
When you create a global theme using the lookandfeelexplorer the used icon theme will be absent in the result. When I put the following into the defaults-file of the global theme:

[kdeglobals][Icons]
Theme=My-Icon-Theme

then the KCM handles the icon theme I added by hand in a correct way and applies it if that is asked.
***


STEPS TO REPRODUCE
1. start the lookandfeelexplorer
2. create a new global theme
3. save it

OBSERVED RESULT
Used icon theme is absent in the newly created global theme

EXPECTED RESULT
Used icon theme is part of the newly created global theme

Operating System: KDE neon 5.27
KDE Plasma Version: 5.27.0
KDE Frameworks Version: 5.103.0
Qt Version: 5.15.8
Kernel Version: 5.19.0-32-generic (64-bit)
Graphics Platform: Wayland
Processors: 4 × Intel® Celeron® J4105 CPU @ 1.50GHz
Memory: 7.4 GiB of RAM
Graphics Processor: Mesa Intel® UHD Graphics 600

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2023-02-16 21:01:56 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-sdk/-/merge_requests/61
Comment 2 Nate Graham 2023-04-04 17:32:48 UTC
Git commit ca6a984df63822cb3cdc7e176184fb2c5fedf545 by Nate Graham, on behalf of Alessio Mattiazzi.
Committed on 04/04/2023 at 17:32.
Pushed by ngraham into branch 'master'.

Add icontheme when creating new global theme

Add the icon theme config group in the defaults config file when
creating a new lookandfeel global theme.
FIXED-IN: 5.27.5

M  +6    -0    lookandfeelexplorer/src/lnflogic.cpp

https://invent.kde.org/plasma/plasma-sdk/commit/ca6a984df63822cb3cdc7e176184fb2c5fedf545
Comment 3 Nate Graham 2023-04-04 17:38:57 UTC
Git commit 8d0522a470ef998ae7716427954d76f3ba60a645 by Nate Graham, on behalf of Alessio Mattiazzi.
Committed on 04/04/2023 at 17:38.
Pushed by ngraham into branch 'Plasma/5.27'.

Add icontheme when creating new global theme

Add the icon theme config group in the defaults config file when
creating a new lookandfeel global theme.
FIXED-IN: 5.27.5


(cherry picked from commit ca6a984df63822cb3cdc7e176184fb2c5fedf545)

M  +6    -0    lookandfeelexplorer/src/lnflogic.cpp

https://invent.kde.org/plasma/plasma-sdk/commit/8d0522a470ef998ae7716427954d76f3ba60a645