Add icontheme when creating new global theme

Add the icon theme config group in the defaults config file when
creating a new lookandfeel global theme.

BUG: 465817
FIXED-IN: 5.27.5